# totp-cli

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: lib.rs  main.rs  totp_config.rs
tests/: cli.rs
